# cube-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEPRECATED.md  GITHUB_PAGES.md  Makefile  README.md  ROADMAP.md  cube-TASK-integration-plan.md  cube-integration-plan.md  osworld_req.txt  pyproject.toml  ruff.toml  run-website.sh  solvable_lite.json
.claude/: settings.json
.githooks/: pre-commit
agentlab2/: Makefile  README.md  pyproject.toml
cubes/: README.md
cubes/arithmetic-cube/: Makefile  pyproject.toml
cubes/arithmetic-cube/src/arithmetic_cube/: __init__.py  benchmark.py  configs.py  debug.py  task.py  tool.py
cubes/drbench-cube/: Makefile  README.md  pyproject.toml
cubes/drbench-cube/scripts/: generate_task_metadata.py
cubes/drbench-cube/src/drbench_cube/: __init__.py  benchmark.py  benchmark_metadata.json  container.py  debug.py  task.py  task_metadata.json  tool.py
cubes/drbench-cube/tests/: test_benchmark.py
cubes/math-tool-use/: Makefile  pyproject.toml
cubes/math-tool-use/src/math_tool_use/: __init__.py  benchmark.py  debug.py  task.py  tool.py
cubes/miniwob/: Makefile  pyproject.toml
cubes/miniwob/src/miniwob_cube/: __init__.py  benchmark.py  configs.py  debug.py  miniwob_tasks.json  task.py
cubes/osworld-cube/: .env.template  Makefile  README.md  example.ipynb  pyproject.toml  pyrightconfig.json  readme.md
cubes/osworld-cube/scripts/: create_task_metadata.py  install_qemu.sh
cubes/osworld-cube/src/osworld_cube/: __init__.py  _paths.py  axtree.py  benchmark.py  computer.py  configs.py  debug.py  debug_agent.py  debug_task_metadata.json  task.py  task_metadata.json  vm_utils.py
cubes/osworld-cube/src/osworld_cube/scripts/: install.sh
cubes/osworld-cube/src/osworld_cube/vm_backend/: __init__.py  evaluator.py  guest_agent.py  qemu_manager.py  setup_controller.py
cubes/osworld-cube/src/osworld_cube/vm_backend/getters/: chrome.py  impress.py
cubes/osworld-cube/src/osworld_cube/vm_backend/metrics/: chrome.py  docs.py  general.py  slides.py  table.py  thunderbird.py  vlc.py  vscode.py
cubes/osworld-cube/tests/: test_cube.py  test_osworld.py  test_run_osworld.py
cubes/terminalbench2-cube/: Makefile  README.md  pyproject.toml
cubes/terminalbench2-cube/scripts/: create_task_metadata.py
cubes/terminalbench2-cube/src/terminalbench2_cube/: __init__.py  benchmark.py  configs.py  debug.py  task.py  task_metadata.json
cubes/terminalbench2-cube/tests/: test_benchmark.py  test_build_tool.py  test_uv_preinstall.py
cubes/webarena-verified/: Makefile  pyproject.toml
cubes/webarena-verified/scripts/: generate_task_metadata.py
cubes/webarena-verified/src/webarena_verified_cube/: __init__.py  benchmark.py  bgym_test_split.json  configs.py  debug.py  resources.py  task.py  tool.py
cubes/webarena-verified/src/webarena_verified_cube/scripts/: all_sites_launch.sh  install.sh  reddit_launch.sh  wikipedia_launch.sh
cubes/windows-agent-arena-cube/: AZURE_FIRST_RUN.md  AZURE_PROVISIONING.md  DESIGN_DECISIONS.md  LIBREOFFICE_REBUILD.md  Makefile  OSWORLD_ALIGNMENT_FINDINGS.md  PROBE_AND_PUBLISH.md  README.md  TODO.md  pyproject.toml
cubes/windows-agent-arena-cube/packer/: README.md  bootstrap_winrm.py  manual_finish_image.py  run.sh  smoke_test.py  waa-windows.pkr.hcl
cubes/windows-agent-arena-cube/packer/scripts/: install-azure-vm-agent.ps1  install-openssh-server.ps1
cubes/windows-agent-arena-cube/scripts/: create_task_metadata.py
cubes/windows-agent-arena-cube/src/waa_cube/: __init__.py  azure.py  benchmark.py  computer.py  configs.py  debug.py  debug_tasks.json  task.py  task_execution_info.json  task_metadata.json
cubes/windows-agent-arena-cube/src/waa_cube/vm_backend/: __init__.py  backend.py  evaluator.py  setup_controller.py
cubes/windows-agent-arena-cube/src/waa_cube/vm_backend/getters/: __init__.py  chrome.py  edge.py  file.py  fileexplorer.py  general.py  gimp.py  info.py  microsoftpaint.py  misc.py  msedge.py  settings.py  vlc.py
cubes/windows-agent-arena-cube/src/waa_cube/vm_backend/metrics/: basic_os.py  chrome.py  docs.py  edge.py  general.py  gimp.py  table.py  vlc.py  vscode.py
cubes/windows-agent-arena-cube/tests/: test_benchmark.py  test_waa_benchmark.py
design/: cube_uniformization.md
docs/: BENCHMARK_POOL_DESIGN.md  BGYM_TOOL_REFACTOR.md  _config.yml  about.markdown  configuration.md  contributing.markdown  index.markdown  rfc-benchmark-config-make.md  rfc-loop-owning-agents.md  second_page.markdown  swe_benchmarks.md
experiments/: meta_agent_log.md
integration-tests/: pyproject.toml  test_debug_matrix.py  test_swebench_verified_daytona.py  test_terminalbench_local.py
integration-tests/cube_integration_tests/: debug_harness.py
meta_agent/: README.md  osworld_hints.py  workarena_hints.py
openspec/: README.md
osworld-cube/: pyproject.toml
osworld-cube/src/osworld_cube/: __init__.py  benchmark.py  config.py  debug.py  debug_agent.py  osworld_tasks.json  task.py  tools.py  vm_utils.py
osworld-cube/tests/: test_debug_tasks.py  test_osworld.py
recipes/: allac_recipe.py  browsercomp.py  connect_mcp_server.py  debug_osworld.py  demo_resumption.py  eval_osworld.py  eval_osworld_2tasks.py  eval_osworld_haiku.py  eval_osworld_haiku_3obs.py  eval_osworld_haiku_3obs_100actions.py  eval_osworld_haiku_3obs_100actions_computer13.py  eval_osworld_haiku_3obs_100actions_v2.py  eval_osworld_precube_prompt.py  eval_osworld_pyautogui.py  genny2_swe.py  genny2_swe_live_recipe.py  genny2_swe_recipe.py  genny2_terminalbench_iter_recipe.py  genny2_terminalbench_recipe.py  gold_patch_baseline_recipe.py  hello_livecodebench.py  hello_math_tool.py  hello_math_tool_rl.py  hello_mcp.py  hello_mind2web.py  hello_miniwob.py  hello_miniwob_bgym.py  hello_osworld.py  hello_osworld_pyautogui.py  hello_swebench.py  hello_swebench_live.py  hello_swebench_verified.py  hello_tbench.py  hello_terminalbench.py  hello_workarena.py  hello_world_metrics.py  infra_template.py  meta_agent_recipe.py  meta_agent_web_recipe.py  metrics.py  (+22 more)
scripts/: blame_by_modality.py  experiments_report.py  (+5 more)
(+528 files in other folders)
