
[project]
name = "agentlab2"
version = "0.1.0"
description = "agentlab2, open source agentic evaluation and data generation framework."
readme = "README.md"
authors = [
    { name = "Aman Jaiswal", email = "amanjaiswal73892@gmail.com" },
    { name = "Oleh Shliazhko", email = "oleh.shliazhko@servicenow.com" },
]
requires-python = ">=3.12"
dependencies = [
    "cube-standard",
    "pydantic~=2.0",
    "litellm~=1.80.8",
    "playwright==1.44",
    "Pillow~=11.0",
    "beautifulsoup4~=4.14",
    "numpy~=2.3.5",
    "numpydoc~=1.10.0",
    "ray[default]>=2.52.1",
    "tenacity~=8.5.0",
    "python-dotenv~=1.2.0",
    "termcolor~=3.2",
    "miniwob>=1.0",
    "gradio~=5.49",
    "matplotlib>=3.8",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "browsergym-core>=0.14.3",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
]

[project.optional-dependencies]
# WorkArena benchmark dependencies
workarena = [
    "browsergym-workarena>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
constraint-dependencies = ["pyasn1>=0.6.2", "cryptography>=46.0.5", "protobuf>=6.33.5"]

[tool.uv.sources]
cube-standard = { path = "../cube-standard", editable = true }

[tool.ruff]
fix = true
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"] # sort imports

[project.scripts]
al2-viewer = "agentlab2.viewer:main"
al2-xray = "agentlab2.analyze.xray:main"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: mark test to be run sequantially (deselect with '-m \"not serial\"')"
]

[tool.setuptools.packages.find]
where = ["src"]
