[project]
name = "agentlab2"
version = "0.1.0"
description = "agentlab2, open source framework."
readme = "README.md"
authors = [
    { name = "Aman Jaiswal", email = "amanjaiswal73892@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
fix = true
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"] # sort imports

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
