[project]
name = "cube-integration-tests"
version = "0.1.0"
description = "End-to-end integration tests for CUBE infra backends + benchmark cubes"
requires-python = ">=3.13"
dependencies = ["cube-standard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[dependency-groups]
aws = [
    "cube-infra-aws",
    "webarena-verified-cube",
]
azure = [
    "cube-infra-azure",
    "webarena-verified-cube",
]

[tool.uv.sources]
cube-standard = { path = "../../cube-standard", editable = true }
cube-infra-aws = { path = "../../cube-standard/cube-resources/cube-infra-aws", editable = true }
cube-infra-azure = { path = "../../cube-standard/cube-resources/cube-infra-azure", editable = true }
webarena-verified-cube = { path = "../cubes/webarena-verified", editable = true }

[tool.uv]
override-dependencies = ["cube-standard @ file:///Users/alexandre.lacoste/dev/cube/cube-standard"]
