[project]
name = "arithmetic-cube"
version = "0.1.0"
description = "Simple arithmetic benchmark — submit the correct answer to math problems"
requires-python = ">=3.12"
dependencies = [
    "cube",
]

[tool.uv.sources]
cube = { path = "../../../cube-standard", editable = true }

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
