[project]
name = "drbench-cube"
version = "0.2.1"
description = "Deep Research Benchmark: 100 enterprise document research tasks requiring multi-hop retrieval across Nextcloud, Mattermost, email, and web."
requires-python = ">=3.12"
dependencies = [
    "cube-standard",
    "drbench",
    "requests",
    "beautifulsoup4",
    "PyPDF2",
    "python-docx",
    "openpyxl",
]

[project.entry-points."cube.benchmarks"]
drbench-cube = "drbench_cube.benchmark:DrBenchBenchmark"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv.sources]
drbench = { git = "https://github.com/ServiceNow/drbench.git" }

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
