[project]
name = "math-tool-use"
version = "0.1.0"
description = "Math tool-use benchmark — solve arithmetic with one deterministic Python call and a LaTeX final answer"
requires-python = ">=3.12"
dependencies = [
    "cube-standard",
    "datasets>=4.8.4",
    "sandbox-fusion",
]

[project.entry-points."cube.benchmarks"]
math-tool-use = "math_tool_use.benchmark:MathToolUseBenchmark"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
