[project]
name = "miniwob-cube"
version = "1.0.0"
description = "MiniWob++ benchmark for cube"
requires-python = ">=3.12"
dependencies = [
    "cube-standard>=0.1.0rc8",
    "miniwob>=1.0",
    "cube-browser-tool[bgym]>=0.3.0"
]

[project.entry-points."cube.benchmarks"]
miniwob-cube = "miniwob_cube.benchmark:MiniWobBenchmarkConfig"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv-build]
include = ["src/miniwob_cube/task_metadata.json"]

[tool.uv.sources]
# cube-browser-tool 0.3.0 lives on cube-standard's dev branch
# (cube-tools/cube-browser-tool subdirectory); PyPI only has <=0.2.0.
cube-browser-tool = { git = "https://github.com/The-AI-Alliance/cube-standard", subdirectory = "cube-tools/cube-browser-tool" }

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
