[project]
name = "osworld-cube"
version = "0.1.0"
description = "OSWorld benchmark ported to the CUBE protocol"
requires-python = ">=3.12"
dependencies = [
    "cube-standard",
    "cube-computer-tool",
    "pillow>=9.0",
    "requests>=2.0",
    "tqdm>=4.0",
]

[project.entry-points."cube.benchmarks"]
osworld-cube = "osworld_cube.benchmark:OSWorldBenchmark"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
override-dependencies = ["protobuf>=6.33.5"]

[tool.uv.sources]
cube-computer-tool = { path = "../../../cube-standard/cube-tools/cube-computer-tool" }
cube-standard = { path = "../../../cube-standard" }

[tool.ruff]
fix = true
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-rs"
markers = ["integration: requires Docker + KVM + OSWorld qcow2"]
