[project]
name = "waa-cube"
version = "0.1.0"
description = "WindowsAgentArena benchmark ported to the CUBE protocol"
requires-python = ">=3.12"
dependencies = [
    "cube-standard",
    "cube-computer-tool",
    "docker>=7.1.0",
    "pillow>=9.0",
    "requests>=2.28",
    "requests-toolbelt>=0.10",
    "lxml>=4.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "playwright>=1.40",
    "openpyxl>=3.1",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "pypdf>=3.0",
    "rapidfuzz>=3.0",
    "imagehash>=4.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "opencv-python-headless>=4.8",
]

[project.entry-points."cube.benchmarks"]
waa-cube = "waa_cube.benchmark:WAABenchmark"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.ruff]
fix = true
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
